# psa-label-enforcer-policy

./: .gitignore  Cargo.toml  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  metadata.yml  questions-ui.yml
.github/workflows/: release.yml
src/: lib.rs  settings.rs
test_data/: invalid_settings.json  namespace_with_invalid_labels.json  namespace_with_labels.json  namespace_with_no_labels.json  setting_all_modes_set.json
