[package]
name = "psa-label-enforcer"
version = "1.0.6"
authors = ["José Guilherme Vanz <jguilhermevanz@suse.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.26.0", features = ["v1_32"] }
kubewarden-policy-sdk = { version = "0.15.0", default-features = false }
regex = "1"
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.26"
